Format html document

--- a/templates/home.html
+++ b/templates/home.html
@@ -15,11 +15,11 @@
     <div class="slide">
         <img src=" {% static '/images/hero-images/parashut.jpg' %}" alt="parashut image">
     </div>
-    
+
     <div class="slide">
         <img src="{% static '/images/hero-images/puntacana-beach.jpg' %}" alt="puntacana-beach image">
     </div>
-    
+
     <div class="slide">
         <img src="{% static '/images/hero-images/speed-boat.jpg' %}" alt="speed-boat image">
     </div>
@@ -36,15 +36,16 @@
 
 <section>
     <div class="section-title">
-        <h3 > Top Excursions</h3>
+        <h3> Top Excursions</h3>
         <div class="my-btn">
-        <button type="button" class="btn btn-outline-secondary"> See all escursions >></button>
-       </div>
+            <button type="button" class="btn btn-outline-secondary"> See all escursions >></button>
+        </div>
     </div>
 
-     <div class="card-container">
-         <div class="card-wrapper">
-         <img src="https://media.tacdn.com/media/attractions-splice-spp-360x240/06/6f/33/2d.jpg" alt="boat-escursion image">
+    <div class="card-container">
+        <div class="card-wrapper">
+            <img src="https://media.tacdn.com/media/attractions-splice-spp-360x240/06/6f/33/2d.jpg"
+                alt="boat-escursion image">
             <h5 class="card-title">Paradisus Palma Real Golf ...</h5>
             <div class="card-star">
                 <i class="fa-solid fa-star"></i>
@@ -59,54 +60,57 @@
             </div>
         </div>
         <div class="card-wrapper">
-            <img src="https://media.tacdn.com/media/attractions-splice-spp-360x240/07/71/e5/77.jpg" alt="boat-escursion image">
-               <h5 class="card-title">Paradisus Palma Real Golf ...</h5>
-               <div class="card-star">
-                   <i class="fa-solid fa-star"></i>
-                   <i class="fa-solid fa-star"></i>
-                   <i class="fa-solid fa-star"></i>
-                   <i class="fa-solid fa-star"></i>
-                   <i class="fa-solid fa-star"></i>
-                   <span> 8.5 very good</span>
-               </div>
-               <div class="price">
-                   £320
-               </div>
-           </div>
-           <div class="card-wrapper">
-            <img src="https://media.tacdn.com/media/attractions-splice-spp-360x240/0b/b6/b0/ce.jpg" alt="boat-escursion image">
-               <h5 class="card-title">Paradisus Palma Real Golf ...</h5>
-               <div class="card-star">
-                   <i class="fa-solid fa-star"></i>
-                   <i class="fa-solid fa-star"></i>
-                   <i class="fa-solid fa-star"></i>
-                   <i class="fa-solid fa-star"></i>
-                   <i class="fa-solid fa-star"></i>
-                   <span> 8.5 very good</span>
-               </div>
-               <div class="price">
-                   £320
-               </div>
-           </div>
-           <div class="card-wrapper">
-            <img src="https://media.tacdn.com/media/attractions-splice-spp-360x240/06/6f/33/01.jpg" alt="boat-escursion image">
-               <h5 class="card-title">Paradisus Palma Real Golf ...</h5>
-               <div class="card-star">
-                   <i class="fa-solid fa-star"></i>
-                   <i class="fa-solid fa-star"></i>
-                   <i class="fa-solid fa-star"></i>
-                   <i class="fa-solid fa-star"></i>
-                   <i class="fa-solid fa-star"></i>
-                   <span> 8.5 very good</span>
-               </div>
-               <div class="price">
-                   £320
-               </div>
-           </div>
+            <img src="https://media.tacdn.com/media/attractions-splice-spp-360x240/07/71/e5/77.jpg"
+                alt="boat-escursion image">
+            <h5 class="card-title">Paradisus Palma Real Golf ...</h5>
+            <div class="card-star">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <span> 8.5 very good</span>
+            </div>
+            <div class="price">
+                £320
+            </div>
+        </div>
+        <div class="card-wrapper">
+            <img src="https://media.tacdn.com/media/attractions-splice-spp-360x240/0b/b6/b0/ce.jpg"
+                alt="boat-escursion image">
+            <h5 class="card-title">Paradisus Palma Real Golf ...</h5>
+            <div class="card-star">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <span> 8.5 very good</span>
+            </div>
+            <div class="price">
+                £320
+            </div>
+        </div>
+        <div class="card-wrapper">
+            <img src="https://media.tacdn.com/media/attractions-splice-spp-360x240/06/6f/33/01.jpg"
+                alt="boat-escursion image">
+            <h5 class="card-title">Paradisus Palma Real Golf ...</h5>
+            <div class="card-star">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <span> 8.5 very good</span>
+            </div>
+            <div class="price">
+                £320
+            </div>
+        </div>
         <div>
-     </div>
+        </div>
 
-    
+
 
 </section>
 
@@ -120,67 +124,71 @@
 
     <div class="card-container">
         <div class="card-wrapper">
-        <img src="https://content.r9cdn.net/rimg/kimg/58/48/b4f6c8d34949f9d6.jpg?width=536&height=402&crop=true" alt="boat-escursion image">
-           <h5 class="card-title">Paradisus Palma Real Golf ...</h5>
-           <div class="card-star">
-               <i class="fa-solid fa-star"></i>
-               <i class="fa-solid fa-star"></i>
-               <i class="fa-solid fa-star"></i>
-               <i class="fa-solid fa-star"></i>
-               <i class="fa-solid fa-star"></i>
-               <span> 8.5 very good</span>
-           </div>
-           <div class="price">
-               £320
-           </div>
-       </div>
-       <div class="card-wrapper">
-           <img src="https://content.r9cdn.net/rimg/himg/b1/11/59/ice-76561-68478003_3XL-602480.jpg?width=536&height=402&crop=true" alt="boat-escursion image">
-              <h5 class="card-title">Paradisus Palma Real Golf ...</h5>
-              <div class="card-star">
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <span> 8.5 very good</span>
-              </div>
-              <div class="price">
-                  £320
-              </div>
-          </div>
-          <div class="card-wrapper">
-           <img src="https://content.r9cdn.net/rimg/himg/69/a8/be/arbisoftimages-3214352-Royalton_Bavaro_LR_005-image.jpg?width=536&height=402&crop=true" alt="boat-escursion image">
-              <h5 class="card-title">Paradisus Palma Real Golf ...</h5>
-              <div class="card-star">
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <span> 8.5 very good</span>
-              </div>
-              <div class="price">
-                  £320
-              </div>
-          </div>
-          <div class="card-wrapper">
-           <img src="https://content.r9cdn.net/rimg/himg/10/a0/17/booking-313415-64680102.jpg_k=5ce3b2673b5e48703db329a46f1b61739c5c4bd4efdfc894b55d53e9b2fa1327_o=-720214.jpg?width=536&height=402&crop=true" alt="boat-escursion image">
-              <h5 class="card-title">Paradisus Palma Real Golf ...</h5>
-              <div class="card-star">
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <span> 8.5 very good</span>
-              </div>
-              <div class="price">
-                  £320
-              </div>
-          </div>
-       <div>
-    </div>
+            <img src="https://content.r9cdn.net/rimg/kimg/58/48/b4f6c8d34949f9d6.jpg?width=536&height=402&crop=true"
+                alt="boat-escursion image">
+            <h5 class="card-title">Paradisus Palma Real Golf ...</h5>
+            <div class="card-star">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <span> 8.5 very good</span>
+            </div>
+            <div class="price">
+                £320
+            </div>
+        </div>
+        <div class="card-wrapper">
+            <img src="https://content.r9cdn.net/rimg/himg/b1/11/59/ice-76561-68478003_3XL-602480.jpg?width=536&height=402&crop=true"
+                alt="boat-escursion image">
+            <h5 class="card-title">Paradisus Palma Real Golf ...</h5>
+            <div class="card-star">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <span> 8.5 very good</span>
+            </div>
+            <div class="price">
+                £320
+            </div>
+        </div>
+        <div class="card-wrapper">
+            <img src="https://content.r9cdn.net/rimg/himg/69/a8/be/arbisoftimages-3214352-Royalton_Bavaro_LR_005-image.jpg?width=536&height=402&crop=true"
+                alt="boat-escursion image">
+            <h5 class="card-title">Paradisus Palma Real Golf ...</h5>
+            <div class="card-star">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <span> 8.5 very good</span>
+            </div>
+            <div class="price">
+                £320
+            </div>
+        </div>
+        <div class="card-wrapper">
+            <img src="https://content.r9cdn.net/rimg/himg/10/a0/17/booking-313415-64680102.jpg_k=5ce3b2673b5e48703db329a46f1b61739c5c4bd4efdfc894b55d53e9b2fa1327_o=-720214.jpg?width=536&height=402&crop=true"
+                alt="boat-escursion image">
+            <h5 class="card-title">Paradisus Palma Real Golf ...</h5>
+            <div class="card-star">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <span> 8.5 very good</span>
+            </div>
+            <div class="price">
+                £320
+            </div>
+        </div>
+        <div>
+        </div>
 
 
 </section>
