Add links to home and change name in  navbar

--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -62,7 +62,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
-                                <i class="fa-solid fa-user"></i> Excursions
+                                <i class="fa-solid fa-user"></i> Sort by
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href=""></i>Sort by newest</a></li>
