--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,7 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <div class="links-container">
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'excursions' %}"> <i class="fa-solid fa-compass"></i> Book
+                            <a class="nav-link" href="{% url 'excursions' %}"> <i class="fa-solid fa-compass"></i>
                                 Excursions</a>
                         </li>
                         <li class="nav-item">
