--- a/templates/home.html
+++ b/templates/home.html
@@ -38,7 +38,7 @@
     <div class="section-title">
         <h3> Top Excursions</h3>
         <div class="my-btn">
-            <button type="button" class="btn btn-outline-secondary"> See all escursions >></button>
+            <a class="btn user_button_sm" href="{% url 'excursions' %}">See all escursions >></a>
         </div>
     </div>
 
@@ -118,7 +118,7 @@
     <div class="section-title">
         <h3> Top stays </h3>
         <div class="my-btn">
-            <button type="button" class="btn btn-outline-secondary">See all stays >></button>
+            <a class="btn user_button_sm" href="{% url 'rentals' %}">See all stays >></a>
         </div>
     </div>
 
