--- a/static/css/style.css
+++ b/static/css/style.css
@@ -166,7 +166,24 @@ body {
     font-family: var(--font);
     font-weight: 600;
 }
+.ACCOM_type{
+    color: white;
+    padding: 2px 30px;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 10px;
+}
+.green{
+    background-color: #4CAF50; 
+}
+.blue{
+    background-color: #008CBA; 
 
+}
+.red{
+    background-color: #f44336; 
+}
 
 
 /* ----------------Animation for home*/
