Change title to rentals and add img

--- a/templates/rentals/rentals.html
+++ b/templates/rentals/rentals.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <section>
-    <h1 class="text-center mt-5"> All Excursions</h1>
+    <h1 class="text-center mt-5"> All Rentals</h1>
 
     <div class="card-container">
         {% for rental in rentals %}
