--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -66,7 +66,7 @@
                                 <i class="fa-solid fa-user"></i> Sort by
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href=""></i>Sort by newest</a></li>
+                                <li><a class="dropdown-item" href="{% url 'newest_result' %}"></i>Sort by newest</a></li>
                                 <li><a class="dropdown-item" href="">Sort by Oldest</a></li>
                                 <li><a class="dropdown-item" href="">Price (low to high)</a></li>
                                 <li><a class="dropdown-item" href="">Price (high to low) </a></li>
