Add feature of filter by price_ascend

--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -68,7 +68,7 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="{% url 'newest_result' %}"></i>Sort by newest</a></li>
                                 <li><a class="dropdown-item" href="{% url 'oldest_result' %}">Sort by Oldest</a></li>
-                                <li><a class="dropdown-item" href="">Price (low to high)</a></li>
+                                <li><a class="dropdown-item" href="{% url 'filter_by_ascend' %}">Price (low to high)</a></li>
                                 <li><a class="dropdown-item" href="">Price (high to low) </a></li>
                             </ul>
                         </li>
