--- a/templates/rentals/input_search_result.html
+++ b/templates/rentals/input_search_result.html
@@ -1,18 +1,25 @@
-{% extends 'rentals/rentals_base.html' %}
+{% extends 'excursions/excursions_base.html' %}
 {% load static %}
 
 {% block content %}
 
 <section>
-    <h1 class="text-center mt-5"> All Rentals</h1>
-
+    {% if navbar_input != '' and rentals %}
+    <h2 class="text-center mt-5"> You search for "{{navbar_input|upper}}"</h2>
+    {% elif navbar_input == '' %}
+    <h2 class="text-center mt-5"> All Rentals</h2>
+    {% else %}
+    <div></div>
+    {% endif %}
+    
     <div class="card-container">
         {% for rental in rentals %}
         <div class="card-wrapper">
-            <a href="{% url 'rental_detail' rental.pk %}"><img src="{{rental.main_image.url}}" alt="{{rental.image_name}}"> </a>
+            <a href="{% url 'rental_detail' rental.pk %}"><img src="{{rental.main_image.url}}"
+                    alt="{{rental.image_name}}"> </a>
             <h5 class="card-title">{{rental.title|slice:":30"|title}}..</h5>
             <span
-                class="ACCOM_type {% if rental.ACCOM_type == 'Room' %} green {% elif rental.ACCOM_type == 'Apartment' %} blue {% else %} red {% endif %}">{{rental.ACCOM_type}}</span>
+            class="ACCOM_type {% if rental.ACCOM_type == 'Room' %} green {% elif rental.ACCOM_type == 'Apartment' %} blue {% else %} red {% endif %}">{{rental.ACCOM_type}}</span>
             <!-- Reviews -->
             <div class="card-star">
                 <i class="fa-star fa-solid"></i>
@@ -32,8 +39,15 @@
             </div>
         </div>
 
-        {% endfor%}
+        {% empty %}
+        <div class="no-result">
+            <h1> No results for <span class="site-color">{{navbar_input}}</span> </h1>
+            <p>Try checking your spelling or use more general terms</p>
+        </div>
+        {% endfor %}
         <div>
+
+
 </section>
 
 {% endblock content %}
