modified urls names and add link to brand

--- a/templates/excursions/input_search_result.html
+++ b/templates/excursions/input_search_result.html
@@ -8,7 +8,7 @@
     <h2 class="text-center mt-5"> You search for "{{navbar_input|upper}}"</h2>
     {% elif navbar_input == '' %}
     <h2 class="text-center mt-5"> All Excursions</h2>
-    {else}
+    {% else %}
     <div></div>
     {% endif %}
     
