--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -44,7 +44,7 @@
 <body>
     <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"></i><img src="{% static 'images/Yara-logo.png' %}"
+            <a class="navbar-brand" href="{% url 'home' %}"></i><img src="{% static 'images/Yara-logo.png' %}"
                     alt="Yara name with a palm tree"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -111,7 +111,7 @@
 
                 </ul>
                 <!-- Search form -->
-                <form class="d-flex" role="search" method="get" autocomplete="on" action="{% url 'search_results' %}">
+                <form class="d-flex" role="search" method="get" autocomplete="on" action="{% url 'excursion_search_results' %}">
                     {% if navbar_input %}
                     <input class="form-control me-2" type="search" name="navbar" placeholder="{{navbar_input}}"
                         aria-label="Search">
