change placeholder name on navbar input for rentals app

--- a/templates/rentals/rentals_base.html
+++ b/templates/rentals/rentals_base.html
@@ -114,7 +114,7 @@
                     <input class="form-control me-2" type="search" name="navbar" placeholder="{{navbar_input}}"
                         aria-label="Search">
                     {% else %}
-                    <input class="form-control me-2" type="search" name="navbar" placeholder="Search excursions"
+                    <input class="form-control me-2" type="search" name="navbar" placeholder="Search rentals"
                         aria-label="Search">
                     {% endif %}
                     <button class="btn sear-btn btn-outline-secondary" type="submit">Search</button>
