Change house word for villa and add more links  in sort by

--- a/templates/rentals/rentals_base.html
+++ b/templates/rentals/rentals_base.html
@@ -70,6 +70,9 @@
                                 <li><a class="dropdown-item" href="">Sort by Oldest</a></li>
                                 <li><a class="dropdown-item" href="">Price (low to high)</a></li>
                                 <li><a class="dropdown-item" href="">Price (high to low) </a></li>
+                                <li><a class="dropdown-item" href="">All Rooms </a></li>
+                                <li><a class="dropdown-item" href="">All Apartments </a></li>
+                                <li><a class="dropdown-item" href="">All Villas</a></li>
                             </ul>
                         </li>
 
