--- a/templates/rentals/rentals_base.html
+++ b/templates/rentals/rentals_base.html
@@ -68,7 +68,7 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="{% url 'newest_rentals_result' %}"></i>Sort by newest</a></li>
                                 <li><a class="dropdown-item" href="{% url 'oldest_rentals_result' %}">Sort by Oldest</a></li>
-                                <li><a class="dropdown-item" href="">Price (low to high)</a></li>
+                                <li><a class="dropdown-item" href="{% url 'filter_rentals_by_price_ascend' %}">Price (low to high)</a></li>
                                 <li><a class="dropdown-item" href="">Price (high to low) </a></li>
                                 <li><a class="dropdown-item" href="">All Rooms </a></li>
                                 <li><a class="dropdown-item" href="">All Apartments </a></li>
