Add sort by rooms in rentals

--- a/templates/rentals/rentals_base.html
+++ b/templates/rentals/rentals_base.html
@@ -70,7 +70,7 @@
                                 <li><a class="dropdown-item" href="{% url 'oldest_rentals_result' %}">Sort by Oldest</a></li>
                                 <li><a class="dropdown-item" href="{% url 'filter_rentals_by_price_ascend' %}">Price (low to high)</a></li>
                                 <li><a class="dropdown-item" href="{% url 'filter_rentals_by_price_descend' %}">Price (high to low) </a></li>
-                                <li><a class="dropdown-item" href="">All Rooms </a></li>
+                                <li><a class="dropdown-item" href="{% url 'rooms' %}">All Rooms </a></li>
                                 <li><a class="dropdown-item" href="">All Apartments </a></li>
                                 <li><a class="dropdown-item" href="">All Villas</a></li>
                             </ul>
