--- a/templates/rentals/rentals_base.html
+++ b/templates/rentals/rentals_base.html
@@ -71,8 +71,8 @@
                                 <li><a class="dropdown-item" href="{% url 'filter_rentals_by_price_ascend' %}">Price (low to high)</a></li>
                                 <li><a class="dropdown-item" href="{% url 'filter_rentals_by_price_descend' %}">Price (high to low) </a></li>
                                 <li><a class="dropdown-item" href="{% url 'rooms' %}">All Rooms </a></li>
-                                <li><a class="dropdown-item" href="">All Apartments </a></li>
-                                <li><a class="dropdown-item" href="">All Villas</a></li>
+                                <li><a class="dropdown-item" href="{% url 'apartments' %}">All Apartments </a></li>
+                                <li><a class="dropdown-item" href="{% url 'villas' %}">All Villas</a></li>
                             </ul>
                         </li>
                         {% if not user.is_authenticated %}
