--- a/static/css/style.css
+++ b/static/css/style.css
@@ -49,7 +49,7 @@ body {
     grid-template-columns: auto auto auto auto;
 }
 
-/* -------------------------------------------------------------------- home */
+/* -------------------------------------------------------------------- home /excursion / rentals card */
 /* Slides */
 .home-banner h2 {
     font-family: "Qwitcher Grypen", sans-serif;
@@ -198,6 +198,11 @@ body {
         border-color: transparent;
         border-right: 3px solid;
     }
+}
+
+.center{
+    margin: 100px auto;
+    width:200px;
 }
 
 
