--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -3,12 +3,11 @@
 :root {
     --white: #ffffff;
     --black: #212529;
-    --font: "Montserrat", Georgia, sans-serif;
     --shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     --orange-pantone: #f85a15;
     --orange-pantone-lighter: #f96728;
     --gun-metal: #212a30;
-    --font: "Montserrat", Georgia, sans-serif;
+    --font: sans-serif, "Montserrat", Georgia;
     --culture: #f2f2f2;
 }
 
@@ -24,7 +23,7 @@ body {
     background-color: var(--culture);
     min-height: 400px;
     margin-bottom: 150px;
-    font-family: var(--font);
+    font-family: var(--font)
 }
 
 /* -------------------------------------------------------------------- general classes */
@@ -50,7 +49,7 @@ body {
     grid-template-columns: auto auto auto auto;
 }
 
-/* -------------------------------------------------------------------- home */
+/* -------------------------------------------------------------------- home /excursion / rentals card */
 /* Slides */
 .home-banner h2 {
     font-family: "Qwitcher Grypen", sans-serif;
@@ -107,7 +106,7 @@ body {
 
 .btn-outline-secondary {
     border: 2px solid var(--orange-pantone);
-    font-family: sans-serif;
+    font-family: var(--font);
 }
 
 
@@ -122,7 +121,7 @@ body {
 
 .card-title {
     font-size: 14px;
-    font-family: 'Helvetica Neue', Arial, sans-serif;
+    font-family: var(--font);
     font-weight: 600;
     font-size: 14px;
     line-height: 20px;
@@ -153,7 +152,7 @@ body {
     font-weight: 600;
     font-size: 16px;
     line-height: 24px;
-    font-family: 'Helvetica Neue', Arial, sans-serif;
+    font-family: var(--font);
 }
 
 .card-star i {
@@ -164,11 +163,27 @@ body {
 .card-star span {
     font-size: 14px;
     color: var(--gun-metal);
-    font-family: 'Helvetica Neue', Arial, sans-serif;
+    font-family: var(--font);
     font-weight: 600;
 }
+.ACCOM_type{
+    color: white;
+    padding: 2px 30px;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 10px;
+}
+.green{
+    background-color: #4CAF50; 
+}
+.blue{
+    background-color: #008CBA; 
 
-
+}
+.red{
+    background-color: #f44336; 
+}
 
 /* ----------------Animation for home*/
 @keyframes typing {
@@ -185,11 +200,24 @@ body {
     }
 }
 
+.center{
+    margin: 100px auto;
+    width:200px;
+}
+
 
 /* -------------------------------------------------------------------- forms */
 .add_excursions_form {
     width: 800px;
     margin: auto;
+}
+/* ------------------------------------------------------------------search classes */
+
+.no-result{
+margin-top:100px;
+}
+.site-color{
+    color:var(--orange-pantone)
 }
 
 /* -------------------------------------------------------------------- detail page */
@@ -218,7 +246,7 @@ body {
 }
 
 .detail-price {
-    font-family: sans-serif;
+    font-family: var(--font);
     font-size: 20px;
     ;
 
@@ -292,13 +320,13 @@ body {
 /* Review section */
 .review-title {
     margin-top: 10px;
-    font-family: "chronicle display", Times, "times new roman", serif;
+    font-family: var(--font);
     font-size: 30px;
     text-align: center;
 }
 
 .reviews {
-    font-family: dinot, sans-serif;
+    font-family: var(--font);
     font-size: 15px;
     margin: auto;
     width: 70%;
@@ -327,11 +355,79 @@ body {
 
 .review_content {
     color: rgb(15, 17, 17);
-    font-family: "Amazon Ember", Arial, sans-serif;
+  font-family: var(--font);
     font-size: 14px;
     margin: 0px;
     padding: 0px;
 }
+
+/* review form */
+.review-form{
+    width:300px;
+    margin:auto;
+}
+
+.txt-center {
+    text-align: center;
+  }
+  .hide {
+    display: none;
+  }
+  
+  .clear {
+    float: none;
+    clear: both;
+  }
+  
+  .rating {
+      unicode-bidi: bidi-override;
+      direction: rtl;
+      text-align: center;
+      position: relative;
+      float: left;
+      line-height: 23px;
+  }
+  
+  .rating > label {
+      float: right;
+      display: inline;
+      padding: 0;
+      margin: 0;
+      position: relative;
+      width: 1.1em;
+      cursor: pointer;
+      color: var(--orange-pantone);
+      font-size: 25px;
+  }
+  
+  .rating > label:hover,
+  .rating > label:hover ~ label,
+  .rating > input.radio-btn:checked ~ label {
+      color: transparent;
+  }
+  
+  .rating > label:hover:before,
+  .rating > label:hover ~ label:before,
+  .rating > input.radio-btn:checked ~ label:before,
+  .rating > input.radio-btn:checked ~ label:before {
+      content: "\2605";
+      position: absolute;
+      left: 0;
+      color: var(--orange-pantone);
+  }
+
+  .rating-container{
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content:start;
+    grid-column-gap: 10px;
+  }
+
+  .message{
+    text-align: center;
+    width:30%;
+     margin:auto;
+  }
 
 /* -------------------------------------------------------------------- accounts signup/signin etc */
 
@@ -359,6 +455,13 @@ body {
     background-color: var(--orange-pantone);
     color: var(--white)
 }
+
+.user_button_sm {
+    background-color: var(--orange-pantone);
+    color: var(--white)
+}
+
+
 
 .btn:hover {
     color: var(--white);
@@ -647,6 +750,12 @@ ul.socialaccount_providers {
     .item-detail {
         padding: 1.5rem;
         width: auto;
+    }
+    
+    /* review form */
+    .review-form{
+        width:260px;
+        margin:auto;
     }
 
 }
